new maps and typo fixes

--- a/OrangeDot5-0.Rmd
+++ b/OrangeDot5-0.Rmd
@@ -65,7 +65,7 @@ set_flextable_defaults(
 
 # Preface
 
-The first Orange Dot Report was released in 2011 and served both to describe the local income deficit—the gap between what families receive as income and what they need to earn to be self-sufficient—in Charlottesville and to develop strategies for creating pathways to self-sufficiency for families in the region. This initial effort launched the innovative Network2Work framework pioneered at Piedmont Virginia Community College, a process that brings together a Job-Seeker Network, an Employer Network, and a Provider Network to match job-seekers to family-sustaining jobs and careers and to connect them to community resources using neighborhood-based volunteers.
+The first Orange Dot Report was released in 2011, and it served both to describe the local income deficit—the gap between what families receive as income and what they need to earn to be self-sufficient—in Charlottesville and to develop strategies for creating pathways to self-sufficiency for families in the region. This initial effort launched the innovative Network2Work framework pioneered at Piedmont Virginia Community College, a process that brings together a Job-Seeker Network, an Employer Network, and a Provider Network to match job-seekers to family-sustaining jobs and careers and to connect them to community resources using neighborhood-based volunteers.
 
 As Network2Work has grown, the Orange Dot Report has also expanded, encompassing Charlottesville and Albemarle County in Orange Dot Report 2.0 (2015) and the entire region (Albemarle, Buckingham, Charlottesville, Fluvanna, Greene, Louisa, and Nelson) in Orange Dot Report 3.0 (2018) and Orange Dot Report 4.0 (2021). Along the way, the report has come to serve as a central resource for the community and an important update on the progress of our community.
 
@@ -112,7 +112,7 @@ There are 66,633 families living in the Charlottesville region, defined as the c
 
 Of these, 9,413 families (14%) do not make enough money to afford the essentials of life—food, shelter, clothing and utilities—and the added costs associated with working (childcare and transportation).^[This report reflects the U.S. Census Bureau's American Community Survey 5-year averages, 2016-2020.]
 
-While this is still too many families, this is a decrease compared to the numbers provided in the prior report just two years ago. In the Orange Dot Report 4.0, there were 10,940 families (17%) who did not earn enough to meet their basic needs. Since then our community has seen that number reduced by nearly fourteen percent.^[This is a community success, brought about primarily by the hard work of the job-seekers themselves, made possible by the quality employers who hire them, and propelled by the social and material support supplied by family, friends and a network of community-based organizations and agencies.]
+While this is still too many families, this is a decrease compared to the numbers provided in the prior report just two years ago. In the Orange Dot Report 4.0, there were 10,940 families (17%) who did not earn enough to meet their basic needs. Since then our community has seen that number reduced by nearly fourteen percent.^[This is a community success, brought about primarily by the hard work of the job-seekers themselves, made possible by the quality employers who hired them, and propelled by the social and material support supplied by family, friends and a network of community-based organizations and agencies.]
 
 ## Number of Families Struggling in the Region {.figure-title}
 
@@ -184,7 +184,7 @@ This highlights an important distinction. There are at least two categories of s
 
 For most families, low-incomeness is not a constant, not an immutable condition that must be worked around, but a variable that must be changed. For a family experiencing economic struggle, the first question should be: What do they need to increase their income?
 
-Some families are on fixed incomes or have otherwise reached a more constrained earning potential due to illness, caregiving responsibilities, and other circumstances. These families are unlikely to see their incomes increase appreciably and require sustained subsidy to meet their basic needs of food, shelter, clothing and utilities. Based on the income data above, which shows 3,057 families make less than $15,000 annually (28%), as well as data from Charlottesville’s housing affordability study,^[Partners for Economic Solutions. (2018). Housing Needs Assessment: Socioeconomic and Housing Market Analysis. Washington, D.C.: Form-Based Code Institute/Smart Growth America, 58.] for roughly one-third of the families who are struggling, a self-sufficient family income will be out of reach. Their survival depends on the strength of the social safety net.
+Some families are on fixed incomes or have otherwise reached a more constrained earning potential due to illness, caregiving responsibilities, and other circumstances. These families are unlikely to see their incomes increase appreciably and require sustained subsidy to meet their basic needs of food, shelter, clothing and utilities. Based on the income data above, which shows 3,057 families make less than $15,000 annually (28%), as well as data from Charlottesville’s housing affordability study,^[Partners for Economic Solutions (2018). Housing Needs Assessment: Socioeconomic and Housing Market Analysis. Washington, D.C.: Form-Based Code Institute/Smart Growth America, 58.] for roughly one-third of the families who are struggling, a self-sufficient family income will be out of reach. Their survival depends on the strength of the social safety net.
 
 The vast majority of families, however, have the capacity to earn a family-sufficient income. They are working, but their labor is not sufficiently valued.
 
@@ -214,14 +214,14 @@ We all benefit when the families in our community have access to jobs that pay s
 
 **Taxpayers benefit.** Given the chance, families want to provide for themselves. When they are able to do so, they require less support from others.
 
-**People live longer.** According to the Centers for Disease Control, the biggest contributor to poor health is low socio-economic status. The Health Inequality Project estimates that a woman in the Charlottesville area in the lowest income quartile has a life expectancy of seven years less than a woman from the highest income quartile; among men in our region, the life expectancy gap is nearly ten years.^[Chetty R, Stepner M, Abraham S, et al. (2016). The Association Between Income and Life Expectancy in the United States, 2001-2014. JAMA 315:1750–1766. doi:10.1001/jama.2016.4226. Data: https://healthinequality.org/data/]
+**People live longer.** According to the Centers for Disease Control, the biggest contributor to poor health is low socio-economic status. The Health Inequality Project estimates that a woman in the Charlottesville area in the lowest income quartile has a life expectancy of seven years less than a woman from the highest income quartile; among men in our region, the life expectancy gap is nearly ten years.^[Chetty R., Stepner M., Abraham S., Lin S., Scuderi B., Turner N., Bergeron A., and Cutler D., (2016). The Association Between Income and Life Expectancy in the United States, 2001-2014. JAMA 315:1750–1766. doi:10.1001/jama.2016.4226. Data: https://healthinequality.org/data/]
 
 **The community thrives.** A community thrives when its residents thrive. Residents thrive when their capacity as human beings is unleashed. And their capacity as human beings can only be unleashed when their basic needs are met. 
 
 
 # The Intersection with Race
 
-Too many families are struggling in our region, but these burdens are not equally shared. Throughout our country and our history, the labor of our Black neighbors has been systematically valued less than the labor of our white neighbors. The undervaluing of Black labor has been reinforced through many policies from those we’ve collectively recognized as racially discriminatory—enslavement, Black codes, Jim Crow, Massive Resistance—to ongoing and often unacknowledged choices—a legacy of disinvestment in and displacement of Black communities, the blocking of wealth creation through red-lining and predatory lending, disproportionate contact with law enforcement and overincarceration, disenfranchisement and political demobilization, overt and subconscious negative stereotypes. And the list could go on.
+Too many families are struggling in our region, but these burdens are not equally shared. Throughout our country and our history, the labor of our Black neighbors has been systematically valued less than the labor of our White neighbors. The undervaluing of Black labor has been reinforced through many policies from those we’ve collectively recognized as racially discriminatory—enslavement, Black codes, Jim Crow, Massive Resistance—to ongoing and often unacknowledged choices—a legacy of disinvestment in and displacement of Black communities, the blocking of wealth creation through red-lining and predatory lending, disproportionate contact with law enforcement and overincarceration, disenfranchisement and political demobilization, overt and subconscious negative stereotypes. And the list could go on.
 
 These policies and choices have generated a significant racial wealth gap. The Federal Reserve Bank of St. Louis calculated that the average net worth of a white family in America was ten times greater than the net worth of a Black family, as shown below.^[Mock, B. (2019, March 21). Why Can’t We Close the Racial Wealth Gap? Bloomberg City Lab. Retrieved from https://www.bloomberg.com/news/articles/2019-03-21/how-income-inequality-feeds-the-racial-wealth-gap. Data on unequal labor income in our region comes from U.S. Census Bureau (2020). Family Income in the Past 12 Months. American Community Survey 5-Year Estimates, 2014-2018, Tables B19101, 19101A, 19101B.]
 
@@ -316,9 +316,9 @@ We need to be intentional about helping all families in our community who are st
 
 # Locality Profiles
 
-The following sections explore each locality separately, detailing what it costs to be self-sufficient in each of the localities that comprise the region—including the costs of food^[U.S. Department of Agriculture, Center for Nutrition Policy and Promotion (2022). Official USDA Food Plans: Cost of Food at Home at Four Levels, U.S. Average, May 2022, Weekly Cost of the Low-Cost Plan. Retrieved from https://www.fns.usda.gov/sites/default/files/media/file/CostofFoodMay2022Thrifty.pdf], shelter^[Virginia Housing. (2022). 2022 Fair Market Rents. Retrieved from https://www.huduser.gov/portal/datasets/fmr/fmrs/FY2022_code/2022summary.odn], clothing^[U.S. Department of Agriculture, Center for Nutrition Policy and Promotion. (2017). Expenditures on Children by Families, Estimated annual expenditures on a child by single-parent families. Retrieved from https://www.fns.usda.gov/sites/default/files/resource-files/crc2015-march2017.pdf and U.S. Bureau of Labor Statistics. (2020). Consumer Expenditures Survey, CE Tables, Age of Reference Person, Apparel and Services by Women, 16 and over. Retrieved from https://www.bls.gov/cex/tables/calendar-year/mean-item-share-average-standard-error/reference-person-age-ranges-2020.pdf], utilities^[Virginia Housing Development Authority. (2022). Allowances for Tenant-Furnished Utilities and Other Services, Two Exposed UA Schedule. Retrieved from https://mc-0e9acafd-48f4-4c49-b478-6257-cdn-endpoint.azureedge.net/-/media/docs/partners/housing-choice-vouchers/utility-allowance/2exposed-walls.pdf?rev=91c81573c2e94b8cb314f871bbad5e65&hash=666946C107D54311AC4222AC1E81F850 and the U.S. Bureau of Labor Statistics. (2020), Consumer Expenditure Survey, Telephone Services. Retrieved from https://www.bls.gov/cex/tables/calendar-year/mean-item-share-average-standard-error/reference-person-age-ranges-2020.pdf], childcare^[Virginia Department of Social Services, Division of Child Care and Early Childhood Development. (2021). Child Care Subsidy Program Guidance Manual. Richmond, Virginia. Retrieved from https://doe.virginia.gov/cc/files/child-care-subsidy-guidance-manual.pdf.], transportation^[U.S. Bureau of Labor Statistics. (2020). Consumer Expenditures Survey, CE Tables, Age of Reference Person, Apparel and Services by Women, 16 and over. Retrieved from https://www.bls.gov/cex/tables/calendar-year/mean-item-share-average-standard-error/reference-person-age-ranges-2020.pdf], and necessary costs^[Garner, T. (2010). Supplemental Poverty Measure Thresholds: Laying the Foundation. Washington DC: Bureau of Labor Statistics.]—and describing how many families in each locality are struggling.
+The following sections explore each locality separately, detailing what it costs to be self-sufficient in each of the localities that comprise the region—including the costs of food^[U.S. Department of Agriculture, Center for Nutrition Policy and Promotion (2022). Official USDA Food Plans: Cost of Food at Home at Four Levels, U.S. Average, May 2022, Weekly Cost of the Low-Cost Plan. Retrieved from https://www.fns.usda.gov/sites/default/files/media/file/CostofFoodMay2022Thrifty.pdf], shelter^[Virginia Housing (2022). 2022 Fair Market Rents. Retrieved from https://www.huduser.gov/portal/datasets/fmr/fmrs/FY2022_code/2022summary.odn], clothing^[U.S. Department of Agriculture, Center for Nutrition Policy and Promotion (2017). Expenditures on Children by Families, Estimated annual expenditures on a child by single-parent families. Retrieved from https://www.fns.usda.gov/sites/default/files/resource-files/crc2015-march2017.pdf and U.S. Bureau of Labor Statistics (2020). Consumer Expenditures Survey, CE Tables, Age of Reference Person, Apparel and Services by Women, 16 and over. Retrieved from https://www.bls.gov/cex/tables/calendar-year/mean-item-share-average-standard-error/reference-person-age-ranges-2020.pdf], utilities^[Virginia Housing Development Authority (2022). Allowances for Tenant-Furnished Utilities and Other Services, Two Exposed UA Schedule. Retrieved from https://mc-0e9acafd-48f4-4c49-b478-6257-cdn-endpoint.azureedge.net/-/media/docs/partners/housing-choice-vouchers/utility-allowance/2exposed-walls.pdf?rev=91c81573c2e94b8cb314f871bbad5e65&hash=666946C107D54311AC4222AC1E81F850 and the U.S. Bureau of Labor Statistics (2020), Consumer Expenditure Survey, Telephone Services. Retrieved from https://www.bls.gov/cex/tables/calendar-year/mean-item-share-average-standard-error/reference-person-age-ranges-2020.pdf], childcare^[Virginia Department of Social Services, Division of Child Care and Early Childhood Development (2021). Child Care Subsidy Program Guidance Manual. Richmond, Virginia. Retrieved from https://doe.virginia.gov/cc/files/child-care-subsidy-guidance-manual.pdf.], transportation^[U.S. Bureau of Labor Statistics (2020). Consumer Expenditures Survey, CE Tables, Age of Reference Person, Apparel and Services by Women, 16 and over. Retrieved from https://www.bls.gov/cex/tables/calendar-year/mean-item-share-average-standard-error/reference-person-age-ranges-2020.pdf], and necessary costs^[Garner, T. (2010). Supplemental Poverty Measure Thresholds: Laying the Foundation. Washington DC: Bureau of Labor Statistics.]—and describing how many families in each locality are struggling.
 
-We show, too, how families are faring by race, as above, and by place. Places, or the neighborhoods within localities, are captured with census tracts, areas used by the United States Census Bureau to approximate neighborhoods. Census tracts are roughly equal in population and are bounded by major roads, rivers and railroad tracks. The geographic variation in our region is evident across these census tracts. Charlottesville for example, is a city of roughly 10 square miles, more densely populated. Albemarle surrounds Charlottesville and dwarfs it physically at 726 square miles, but has both dense neighborhoods and sprawling rural ones. While there is variation across the communities that define the greater Charlottesville region, there is one constant: throughout the region there are hundreds of families who struggle every day to put a roof over their heads, food in their bellies, clothes on their backs and heat in their homes.
+We show, too, how families are faring by race, as above, and by place. Places, or the neighborhoods within localities, are captured with census tracts, areas used by the United States Census Bureau to approximate neighborhoods. Census tracts are roughly equal in population and are bounded by major roads, rivers and railroad tracks. The geographic variation in our region is evident across these census tracts. Charlottesville for example, is a city of roughly 10 square miles that are more densely populated. Albemarle surrounds Charlottesville and dwarfs it physically at 726 square miles, but it has both dense neighborhoods and sprawling rural ones. While there is variation across the communities that define the greater Charlottesville region, there is one constant: throughout the region there are hundreds of families who struggle every day to put a roof over their heads, food in their bellies, clothes on their backs and heat in their homes.
 
 ## Localities {.tabset .tabset-pills}
 
@@ -528,7 +528,7 @@ There are `r comma(buckingham$AllFamE)` families living in `r buckingham$countyN
 
 Buckingham County at a glance:
 
-* Buckingham is the least expensive locality in the region for families given the cost of housing and childcare, but has the largest percentage of families earning less than they need to afford basic needs.
+* Buckingham is the least expensive locality in the region for families given the cost of housing and childcare, but it has the largest percentage of families earning less than they need to afford basic needs.
 
 * In Buckingham, the percent of Black families making under $35,000 a year (39%) is 17% higher than the percent of white families making under $35,000 (22%). 
 
@@ -1533,7 +1533,7 @@ leaflet() %>%
 
 > "When someone works for less pay than she can live on—when, for example, she goes hungry so that you can eat more cheaply and conveniently—then she has made a great sacrifice for you, she has made you a gift of some part of her abilities, her health, and her life. The 'working poor,' as they are approvingly termed, are in fact the major philanthropists of our society." 
 >
-> --- Barbara Ehrenreich.^[Barbara Ehrenreich. (2001). Nickel and Dimed: On (Not) Getting By in America. Metropolitan Books.]
+> --- Barbara Ehrenreich.^[Barbara Ehrenreich (2001). Nickel and Dimed: On (Not) Getting By in America. Metropolitan Books.]
 
 Based on data collected from 2016-2020, at least 9,413 families in the larger Charlottesville region make less than $35,000 a year, far below what’s necessary to afford the essentials of life—food, shelter, clothing and utilities—and additional costs incurred by working. These families reside throughout our region. While Albemarle County, Louisa County, and the City of Charlottesville have the highest number of struggling families, Buckingham County, the City of Charlottesville, and Nelson County have the highest percent of struggling families. And across each locality in our region, the percent of Black families making less than $35,000 exceeds the percent of white families making less than $35,000. Despite working equally hard, the labor of Black families in the Charlottesville region is not equally valued.
 
